<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/ic_message"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_activities"
        android:icon="@drawable/ic_activities"
        android:title="@string/title_activities" />

    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/ic_contacts"
        android:title="@string/title_contacts" />
</menu>
