<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapp.ui.home.HomeFragment"
        android:label="@string/title_home" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.example.myapp.ui.messages.MessagesFragment"
        android:label="@string/title_messages" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications" />

    <fragment
        android:id="@+id/navigation_activities"
        android:name="com.example.myapp.ui.activities.ActivitiesFragment"
        android:label="@string/title_activities" />

    <fragment
        android:id="@+id/navigation_contacts"
        android:name="com.example.myapp.ui.contacts.ContactsFragment"
        android:label="@string/title_contacts" />

    <!-- Global actions that can be triggered from anywhere -->
    <action
        android:id="@+id/action_global_login"
        app:destination="@id/loginActivity"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true" />

    <activity
        android:id="@+id/loginActivity"
        android:name="com.example.myapp.ui.login.LoginActivity"
        android:label="@string/login_title" />

</navigation>
